modal alignment fixed

--- a/src/assets/css/Certification.css
+++ b/src/assets/css/Certification.css
@@ -1,88 +1,19 @@
-:root {
-  --cyan: #5ff0d0;
-  --purple: #a89cc8;
-}
-
-
-
-
-
-
-.dotsContainerStyles {
-    display: flex;
-    justify-content: center;
-}
-
-.dotStyle {
-    margin: 0 3px;
-    cursor: pointer;
-    font-size: 20px;
-    color:#fff;
-  }
-
-
-  .modalImage {
-    max-width: 100%;
-    max-height: 100%;
-    margin: auto;
-  }
-  
-  .customModal {
-    position: fixed;
-    top: 40%;
+   .customModal {
+    top: 50%;
     left: 50%;
-    width: 80%;
-    height: 100%;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    transform: translate(-50%, -30%); 
-    background-color: rgba(241, 243, 239, 0);
+    padding: 0;
+    margin:0;  
    }
 
 .modal-open #wrapper {
-  filter: blur(2px);
+  filter: blur(1px);
 }
-
-  /* .modal {
-    border: 1px solid #48abe0;
-  } */
- 
-
-  .modal-body .modal-close {
-    color: black;
-    text-align: center;
-    cursor: pointer;
-    font-size: 2rem;
-    z-index:9999;
-      position: absolute;
-      top: 0;
-      left:45%;
-      background-color: tranparent;
-      border: none;
-      border-radius: 5px;
-  }
-
-  .modal-body .modal-close:hover {
-      background: #999;
-      color: black;
-  }
   
-  .modal-content {
+  .customModal img {
     max-width: 100%; 
-  }
-  
-  .modal-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80vh; 
-  }
-  
-  .modal-body img {
-    max-width: 100%; 
-    max-height: 100%; 
-    object-fit: contain; 
+    height: auto;
+    object-fit: contain;
   }
 
 
